# mini-aevol

./: .gitignore  CMakeLists.txt  Dna.h  ExpManager.cpp  Makefile  Organism.h  README.md  Stats.cpp  analysis.ipynb  cmds.sh  main.cpp  trace.csv
simulation_example_1/backup/: backup_1000.zae
src/: Dna.cpp  Dna.h  ExpManager.cpp  ExpManager.h  Organism.cpp  Organism.h  Stats.cpp  Stats.h  main.cpp
traces/INTEL/1/2/: trace.csv
traces/INTEL/1/4/: trace.csv
traces/INTEL/1/8/: trace.csv
traces/INTEL/10/2/: trace.csv
traces/INTEL/10/4/: trace.csv
traces/INTEL/10/8/: trace.csv
traces/INTEL/2/2/: trace.csv
traces/INTEL/2/4/: trace.csv
traces/INTEL/2/8/: trace.csv
traces/INTEL/3/2/: trace.csv
traces/INTEL/3/4/: trace.csv
traces/INTEL/3/8/: trace.csv
traces/INTEL/4/2/: trace.csv
traces/INTEL/4/4/: trace.csv
traces/INTEL/4/8/: trace.csv
traces/INTEL/5/2/: trace.csv
traces/INTEL/5/4/: trace.csv
traces/INTEL/5/8/: trace.csv
traces/INTEL/6/2/: trace.csv
traces/INTEL/6/4/: trace.csv
traces/INTEL/6/8/: trace.csv
traces/INTEL/7/2/: trace.csv
traces/INTEL/7/4/: trace.csv
traces/INTEL/7/8/: trace.csv
traces/INTEL/8/2/: trace.csv
traces/INTEL/8/4/: trace.csv
traces/INTEL/8/8/: trace.csv
traces/INTEL/9/2/: trace.csv
traces/INTEL/9/4/: trace.csv
traces/INTEL/9/8/: trace.csv
traces/M1/1/2/: trace.csv
traces/M1/1/4/: trace.csv
traces/M1/1/8/: trace.csv
traces/M1/10/2/: trace.csv
traces/M1/10/4/: trace.csv
traces/M1/10/8/: trace.csv
traces/M1/2/2/: trace.csv
traces/M1/2/4/: trace.csv
traces/M1/2/8/: trace.csv
traces/M1/3/2/: trace.csv
traces/M1/3/4/: trace.csv
traces/M1/3/8/: trace.csv
traces/M1/4/2/: trace.csv
traces/M1/4/4/: trace.csv
traces/M1/4/8/: trace.csv
traces/M1/5/2/: trace.csv
traces/M1/5/4/: trace.csv
traces/M1/5/8/: trace.csv
traces/M1/6/2/: trace.csv
traces/M1/6/4/: trace.csv
(+10 files in other folders)
